--- a/gallery.html
+++ b/gallery.html
@@ -111,6 +111,95 @@
                             </div>
                         </div>
 
+                        <!-- San Francisco Startup Adventure (moved to middle) -->
+                        <div class="gallery-item zoom-hover">
+                            <img src="images/gallery/San_Francisco_startup_adventure_BNE_Intl_Airport_departures.jpeg" alt="SF Startup Adventure Departure" data-caption="Departing for San Francisco Startup Adventure">
+                            <div class="gallery-overlay">
+                                <h3>Adventure Begins</h3>
+                                <p>BNE Airport</p>
+                            </div>
+                        </div>
+
+                        <div class="gallery-item zoom-hover">
+                            <img src="images/gallery/first_day_san_francisco.jpeg" alt="First Day in San Francisco" data-caption="First Day in San Francisco">
+                            <div class="gallery-overlay">
+                                <h3>San Francisco</h3>
+                                <p>First Day</p>
+                            </div>
+                        </div>
+
+                        <div class="gallery-item zoom-hover">
+                            <img src="images/gallery/San_Francisco_TESLA_visit.jpeg" alt="Tesla Visit" data-caption="Tesla Visit in San Francisco">
+                            <div class="gallery-overlay">
+                                <h3>Tesla Visit</h3>
+                                <p>San Francisco</p>
+                            </div>
+                        </div>
+
+                        <div class="gallery-item zoom-hover">
+                            <img src="images/gallery/stanford_uni.jpeg" alt="Stanford University" data-caption="Visit to Stanford University">
+                            <div class="gallery-overlay">
+                                <h3>Stanford University</h3>
+                                <p>Campus Visit</p>
+                            </div>
+                        </div>
+
+                        <div class="gallery-item zoom-hover">
+                            <img src="images/gallery/stanford.jpeg" alt="Stanford" data-caption="Stanford">
+                            <div class="gallery-overlay">
+                                <h3>Stanford</h3>
+                                <p>California</p>
+                            </div>
+                        </div>
+
+                        <div class="gallery-item zoom-hover">
+                            <img src="images/gallery/golden_gate_bridge.jpeg" alt="Golden Gate Bridge" data-caption="Golden Gate Bridge, San Francisco">
+                            <div class="gallery-overlay">
+                                <h3>Golden Gate Bridge</h3>
+                                <p>San Francisco</p>
+                            </div>
+                        </div>
+
+                        <div class="gallery-item zoom-hover">
+                            <img src="images/gallery/golden_gate_visit.jpeg" alt="Golden Gate Visit" data-caption="Visiting the Golden Gate">
+                            <div class="gallery-overlay">
+                                <h3>Golden Gate Visit</h3>
+                                <p>San Francisco</p>
+                            </div>
+                        </div>
+
+                        <div class="gallery-item zoom-hover">
+                            <img src="images/gallery/san_francisco_train.jpeg" alt="San Francisco Train" data-caption="San Francisco Cable Car">
+                            <div class="gallery-overlay">
+                                <h3>Cable Car</h3>
+                                <p>San Francisco</p>
+                            </div>
+                        </div>
+
+                        <div class="gallery-item zoom-hover">
+                            <img src="images/gallery/yosemite_trip.jpeg" alt="Yosemite Trip" data-caption="Trip to Yosemite National Park">
+                            <div class="gallery-overlay">
+                                <h3>Yosemite Trip</h3>
+                                <p>National Park</p>
+                            </div>
+                        </div>
+
+                        <div class="gallery-item zoom-hover">
+                            <img src="images/gallery/uq_startup_adventure_group.jpeg" alt="UQ Startup Adventure" data-caption="UQ Startup Adventure Group">
+                            <div class="gallery-overlay">
+                                <h3>Startup Adventure</h3>
+                                <p>Group Photo</p>
+                            </div>
+                        </div>
+
+                        <div class="gallery-item zoom-hover">
+                            <img src="images/gallery/Startup_Adventure_Picture_with_friends.jpeg" alt="Startup Adventure Friends" data-caption="Startup Adventure with Friends">
+                            <div class="gallery-overlay">
+                                <h3>Adventure Friends</h3>
+                                <p>Startup Adventure</p>
+                            </div>
+                        </div>
+
                         <!-- Women in Tech -->
                         <div class="gallery-item zoom-hover">
                             <img src="images/gallery/Women_in_Tech_Awards_Gala.jpeg" alt="Women in Tech Awards Gala" data-caption="Women in Tech Awards Gala">
@@ -239,95 +328,6 @@
                             <div class="gallery-overlay">
                                 <h3>ACS Event</h3>
                                 <p>BNE Precinct</p>
-                            </div>
-                        </div>
-
-                        <!-- San Francisco Startup Adventure -->
-                        <div class="gallery-item zoom-hover">
-                            <img src="images/gallery/San_Francisco_startup_adventure_BNE_Intl_Airport_departures.jpeg" alt="SF Startup Adventure Departure" data-caption="Departing for San Francisco Startup Adventure">
-                            <div class="gallery-overlay">
-                                <h3>Adventure Begins</h3>
-                                <p>BNE Airport</p>
-                            </div>
-                        </div>
-
-                        <div class="gallery-item zoom-hover">
-                            <img src="images/gallery/first_day_san_francisco.jpeg" alt="First Day in San Francisco" data-caption="First Day in San Francisco">
-                            <div class="gallery-overlay">
-                                <h3>San Francisco</h3>
-                                <p>First Day</p>
-                            </div>
-                        </div>
-
-                        <div class="gallery-item zoom-hover">
-                            <img src="images/gallery/San_Francisco_TESLA_visit.jpeg" alt="Tesla Visit" data-caption="Tesla Visit in San Francisco">
-                            <div class="gallery-overlay">
-                                <h3>Tesla Visit</h3>
-                                <p>San Francisco</p>
-                            </div>
-                        </div>
-
-                        <div class="gallery-item zoom-hover">
-                            <img src="images/gallery/stanford_uni.jpeg" alt="Stanford University" data-caption="Visit to Stanford University">
-                            <div class="gallery-overlay">
-                                <h3>Stanford University</h3>
-                                <p>Campus Visit</p>
-                            </div>
-                        </div>
-
-                        <div class="gallery-item zoom-hover">
-                            <img src="images/gallery/stanford.jpeg" alt="Stanford" data-caption="Stanford">
-                            <div class="gallery-overlay">
-                                <h3>Stanford</h3>
-                                <p>California</p>
-                            </div>
-                        </div>
-
-                        <div class="gallery-item zoom-hover">
-                            <img src="images/gallery/golden_gate_bridge.jpeg" alt="Golden Gate Bridge" data-caption="Golden Gate Bridge, San Francisco">
-                            <div class="gallery-overlay">
-                                <h3>Golden Gate Bridge</h3>
-                                <p>San Francisco</p>
-                            </div>
-                        </div>
-
-                        <div class="gallery-item zoom-hover">
-                            <img src="images/gallery/golden_gate_visit.jpeg" alt="Golden Gate Visit" data-caption="Visiting the Golden Gate">
-                            <div class="gallery-overlay">
-                                <h3>Golden Gate Visit</h3>
-                                <p>San Francisco</p>
-                            </div>
-                        </div>
-
-                        <div class="gallery-item zoom-hover">
-                            <img src="images/gallery/san_francisco_train.jpeg" alt="San Francisco Train" data-caption="San Francisco Cable Car">
-                            <div class="gallery-overlay">
-                                <h3>Cable Car</h3>
-                                <p>San Francisco</p>
-                            </div>
-                        </div>
-
-                        <div class="gallery-item zoom-hover">
-                            <img src="images/gallery/yosemite_trip.jpeg" alt="Yosemite Trip" data-caption="Trip to Yosemite National Park">
-                            <div class="gallery-overlay">
-                                <h3>Yosemite Trip</h3>
-                                <p>National Park</p>
-                            </div>
-                        </div>
-
-                        <div class="gallery-item zoom-hover">
-                            <img src="images/gallery/uq_startup_adventure_group.jpeg" alt="UQ Startup Adventure" data-caption="UQ Startup Adventure Group">
-                            <div class="gallery-overlay">
-                                <h3>Startup Adventure</h3>
-                                <p>Group Photo</p>
-                            </div>
-                        </div>
-
-                        <div class="gallery-item zoom-hover">
-                            <img src="images/gallery/Startup_Adventure_Picture_with_friends.jpeg" alt="Startup Adventure Friends" data-caption="Startup Adventure with Friends">
-                            <div class="gallery-overlay">
-                                <h3>Adventure Friends</h3>
-                                <p>Startup Adventure</p>
                             </div>
                         </div>
                     </div>
