--- a/projects.html
+++ b/projects.html
@@ -63,39 +63,38 @@
                 </div>
                 
                 <div class="projects-grid">
-                    <div class="project-card" id="videospec"
-                        data-full-description="Designed and built a multimodal video-analysis platform using Google Gemini Vision API, AWS Nova API and Python. Implemented asynchronous processing with asyncio, custom URL extraction and video embedding to analyse content across TikTok, Instagram and direct MP4 sources with over 15 classification parameters. Engineered a modular full-stack architecture with Streamlit, AWS S3 integration and OAuth2-authenticated Google Sheets API, providing real-time progress tracking and automated data transformation.">
-                        <div class="project-icon">🎬</div>
-                        <h3>
-                        VideoSpec
-                        <span class="project-company">Multimodal Content Analysis</span>
-                        </h3>
-                        <p>Designed and built a multimodal video-analysis platform using Google Gemini Vision API, AWS Nova API and Python with async processing and 15+ classification parameters.</p>
+                    <div class="project-card" id="futurevest"
+                        data-full-description="FutureVest is a web-based stock analysis platform that helps investors value stocks and discover growth opportunities across thousands of U.S. equities. It provides stock search, screening, watchlists, price alerts, technical analysis, and valuation tools. The platform uses a microservices architecture with containerized services deployed on AWS, enabling scalability and maintainability. Built with React/TypeScript frontend and Flask backend, deployed on AWS ECS Fargate with RDS PostgreSQL, featuring Docker containerization, JWT authentication, and Nginx reverse proxy for scalable, cloud-native architecture. Developed as part of CSSE6400 group project at UQ."
+                        data-demo-link="https://www.youtube.com/watch?v=dNfTGW1w-aw"
+                        data-github-link="https://github.com/saakshigupta2002/FutureVest">
+                        <div class="project-icon">📈</div>
+                        <h3>FutureVest <span class="project-company">Stock Analysis | CSSE6400</span></h3>
+                        <p>A web-based stock analysis platform helping investors value stocks and discover growth opportunities with screening, watchlists, alerts, and technical analysis tools.</p>
                         <div class="project-tech">
+                            <span class="tech-pill">React</span>
+                            <span class="tech-pill">TypeScript</span>
+                            <span class="tech-pill">Flask</span>
                             <span class="tech-pill">Python</span>
-                            <span class="tech-pill">Gemini Vision API</span>
-                            <span class="tech-pill">AWS Nova</span>
-                            <span class="tech-pill">Streamlit</span>
-                            <span class="tech-pill">asyncio</span>
-                            <span class="tech-pill">AWS S3</span>
-                            <span class="tech-pill">OAuth2</span>
-                            <span class="tech-pill">Google Sheets API</span>
+                            <span class="tech-pill">PostgreSQL</span>
+                            <span class="tech-pill">AWS</span>
+                            <span class="tech-pill">Docker</span>
                         </div>
                     </div>
 
-                    <div class="project-card" id="aim-ai"
-                        data-full-description="Developed an AI-powered interviewer chatbot by fine-tuning the Mistral-7B language model using the QLoRA method, achieving an 18% improvement in Rouge-1 scores over the base model. Integrated speech-to-text using the Faster Whisper model with CTranslate2 to support audio input processing four times faster than the original Whisper model. Implemented speaking-pace analysis to maintain an optimal pace of 1–3 words per second.">
-                        <div class="project-icon">🤖</div>                       
-                        <h3>AIM AI <span class="project-company">AI Interviewer</span></h3>
-                        <p>Developed an AI-powered interviewer chatbot by fine-tuning Mistral-7B using QLoRA, achieving 18% improvement in Rouge-1 scores with integrated speech-to-text processing 4x faster than original Whisper.</p>
+                    <div class="project-card" id="cofounder-matching"
+                        data-full-description="A mobile app that connects entrepreneurs with potential co-founders using an algorithm that evaluates compatibility across skills, interests, goals, startup stage, location, availability, and collaboration style. Users create profiles, receive personalized match recommendations with explanations, and interact through in-app messaging and event management. The platform uses a weighted scoring system to surface compatible matches and help users make informed decisions. Key features include multi-factor matching algorithm, real-time authentication, swipeable match interface, in-app messaging, and event calendar management. Developed as part of DECO3801 group project at UQ."
+                        data-github-link="https://github.com/saakshigupta2002/Co-Founder-Matching"
+                        data-demo-link="https://drive.google.com/file/d/1xez-tBBpEBgXvrYNbOPn_La0YoZJnHVT/view?usp=sharing">
+                        <div class="project-icon">🤝</div>
+                        <h3>Co-Founder Matching <span class="project-company">UQ Ventures | DECO3801</span></h3>
+                        <p>A mobile app connecting entrepreneurs with potential co-founders using a multi-factor matching algorithm evaluating skills, interests, goals, and collaboration style.</p>
                         <div class="project-tech">
-                            <span class="tech-pill">Mistral-7B</span>
-                            <span class="tech-pill">QLoRA</span>
-                            <span class="tech-pill">Fine-tuning</span>
-                            <span class="tech-pill">Faster Whisper</span>
-                            <span class="tech-pill">CTranslate2</span>
+                            <span class="tech-pill">React Native</span>
+                            <span class="tech-pill">TypeScript</span>
+                            <span class="tech-pill">Flask</span>
                             <span class="tech-pill">Python</span>
-                            <span class="tech-pill">Speech-to-Text</span>
+                            <span class="tech-pill">Supabase</span>
+                            <span class="tech-pill">Docker</span>
                         </div>
                     </div>
 
@@ -115,6 +114,36 @@
                             <span class="tech-pill">CLIP</span>
                             <span class="tech-pill">Llama 3.1</span>
                             <span class="tech-pill">Hugging Face</span>
+                        </div>
+                    </div>
+
+                    <div class="project-card" id="videospec"
+                        data-full-description="Designed and built a multimodal video-analysis platform using Google Gemini Vision API, AWS Nova API and Python. Implemented asynchronous processing with asyncio, custom URL extraction and video embedding to analyse content across TikTok, Instagram and direct MP4 sources with over 15 classification parameters. Engineered a modular full-stack architecture with Streamlit, AWS S3 integration and OAuth2-authenticated Google Sheets API, providing real-time progress tracking and automated data transformation.">
+                        <div class="project-icon">🎬</div>
+                        <h3>VideoSpec <span class="project-company">Multimodal Content Analysis</span></h3>
+                        <p>Designed and built a multimodal video-analysis platform using Google Gemini Vision API, AWS Nova API and Python with async processing and 15+ classification parameters.</p>
+                        <div class="project-tech">
+                            <span class="tech-pill">Python</span>
+                            <span class="tech-pill">Gemini Vision API</span>
+                            <span class="tech-pill">AWS Nova</span>
+                            <span class="tech-pill">Streamlit</span>
+                            <span class="tech-pill">asyncio</span>
+                            <span class="tech-pill">AWS S3</span>
+                        </div>
+                    </div>
+
+                    <div class="project-card" id="aim-ai"
+                        data-full-description="Developed an AI-powered interviewer chatbot by fine-tuning the Mistral-7B language model using the QLoRA method, achieving an 18% improvement in Rouge-1 scores over the base model. Integrated speech-to-text using the Faster Whisper model with CTranslate2 to support audio input processing four times faster than the original Whisper model. Implemented speaking-pace analysis to maintain an optimal pace of 1–3 words per second.">
+                        <div class="project-icon">🤖</div>                       
+                        <h3>AIM AI <span class="project-company">AI Interviewer</span></h3>
+                        <p>Developed an AI-powered interviewer chatbot by fine-tuning Mistral-7B using QLoRA, achieving 18% improvement in Rouge-1 scores with integrated speech-to-text processing 4x faster than original Whisper.</p>
+                        <div class="project-tech">
+                            <span class="tech-pill">Mistral-7B</span>
+                            <span class="tech-pill">QLoRA</span>
+                            <span class="tech-pill">Fine-tuning</span>
+                            <span class="tech-pill">Faster Whisper</span>
+                            <span class="tech-pill">CTranslate2</span>
+                            <span class="tech-pill">Python</span>
                         </div>
                     </div>
 
@@ -156,41 +185,6 @@
                             <span class="tech-pill">FinTech</span>
                             <span class="tech-pill">App Development</span>
                             <span class="tech-pill">Hackathon</span>
-                        </div>
-                    </div>
-
-                    <div class="project-card" id="cofounder-matching"
-                        data-full-description="A mobile app that connects entrepreneurs with potential co-founders using an algorithm that evaluates compatibility across skills, interests, goals, startup stage, location, availability, and collaboration style. Users create profiles, receive personalized match recommendations with explanations, and interact through in-app messaging and event management. The platform uses a weighted scoring system to surface compatible matches and help users make informed decisions. Key features include multi-factor matching algorithm, real-time authentication, swipeable match interface, in-app messaging, and event calendar management. Developed as part of DECO3801 group project at UQ."
-                        data-github-link="https://github.com/saakshigupta2002/Co-Founder-Matching"
-                        data-demo-link="https://drive.google.com/file/d/1xez-tBBpEBgXvrYNbOPn_La0YoZJnHVT/view?usp=sharing">
-                        <div class="project-icon">🤝</div>
-                        <h3>Co-Founder Matching <span class="project-company">UQ Ventures | DECO3801</span></h3>
-                        <p>A mobile app connecting entrepreneurs with potential co-founders using a multi-factor matching algorithm evaluating skills, interests, goals, and collaboration style.</p>
-                        <div class="project-tech">
-                            <span class="tech-pill">React Native</span>
-                            <span class="tech-pill">TypeScript</span>
-                            <span class="tech-pill">Flask</span>
-                            <span class="tech-pill">Python</span>
-                            <span class="tech-pill">Supabase</span>
-                            <span class="tech-pill">Docker</span>
-                        </div>
-                    </div>
-
-                    <div class="project-card" id="futurevest"
-                        data-full-description="FutureVest is a web-based stock analysis platform that helps investors value stocks and discover growth opportunities across thousands of U.S. equities. It provides stock search, screening, watchlists, price alerts, technical analysis, and valuation tools. The platform uses a microservices architecture with containerized services deployed on AWS, enabling scalability and maintainability. Built with React/TypeScript frontend and Flask backend, deployed on AWS ECS Fargate with RDS PostgreSQL, featuring Docker containerization, JWT authentication, and Nginx reverse proxy for scalable, cloud-native architecture. Developed as part of CSSE6400 group project at UQ."
-                        data-demo-link="https://www.youtube.com/watch?v=dNfTGW1w-aw"
-                        data-github-link="https://github.com/saakshigupta2002/FutureVest">
-                        <div class="project-icon">📈</div>
-                        <h3>FutureVest <span class="project-company">Stock Analysis | CSSE6400</span></h3>
-                        <p>A web-based stock analysis platform helping investors value stocks and discover growth opportunities with screening, watchlists, alerts, and technical analysis tools.</p>
-                        <div class="project-tech">
-                            <span class="tech-pill">React</span>
-                            <span class="tech-pill">TypeScript</span>
-                            <span class="tech-pill">Flask</span>
-                            <span class="tech-pill">Python</span>
-                            <span class="tech-pill">PostgreSQL</span>
-                            <span class="tech-pill">AWS</span>
-                            <span class="tech-pill">Docker</span>
                         </div>
                     </div>
                 </div>
