--- a/blogs.html
+++ b/blogs.html
@@ -64,18 +64,19 @@
                         I write about AI, Machine Learning, and my journey in tech. Check out my articles on Medium!
                     </p>
 
-                    <div class="blogs-grid">
-                        <div class="blog-card-new">
-                            <div class="blog-icon">🤖</div>
+                    <div class="projects-grid">
+                        <div class="project-card blog-card-style">
+                            <div class="project-icon">🤖</div>
                             <h3>Multi-Agent Customer Support Triage System</h3>
-                            <p class="blog-excerpt">Built a multi-agent system for customer support triage using CrewAI framework and monitored it with LangSmith for observability and debugging.</p>
-                            <div class="blog-tech">
+                            <p class="blog-date">Published: January 2026</p>
+                            <p>Built a multi-agent system for customer support triage using CrewAI framework and monitored it with LangSmith for observability and debugging.</p>
+                            <div class="project-tech">
                                 <span class="tech-pill">CrewAI</span>
                                 <span class="tech-pill">LangSmith</span>
                                 <span class="tech-pill">Multi-Agent</span>
                                 <span class="tech-pill">Python</span>
                             </div>
-                            <a href="https://medium.com/@saakshigupta2002/i-built-a-multi-agent-customer-support-triage-system-with-crewai-and-traced-it-with-langsmith-ce7156549a55" target="_blank" class="blog-read-btn">Read on Medium →</a>
+                            <a href="https://medium.com/@saakshigupta2002/i-built-a-multi-agent-customer-support-triage-system-with-crewai-and-traced-it-with-langsmith-ce7156549a55" target="_blank" class="blog-read-btn" onclick="event.stopPropagation();">Read on Medium →</a>
                         </div>
 
                         <!-- Add more blog posts here -->
