--- a/index.html
+++ b/index.html
@@ -321,6 +321,72 @@
                     </div>
                 </div>
             </section>
+
+            <section id="gallery-preview" class="section">
+                <div class="section-header">
+                    <h2 class="section-heading">Gallery Preview</h2>
+                    <div class="terminal-dots">
+                        <span class="dot red"></span>
+                        <span class="dot yellow"></span>
+                        <span class="dot green"></span>
+                    </div>
+                </div>
+                
+                <div class="content-card fade-in">
+                    <div class="gallery-container" style="grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));">
+                        <div class="gallery-item zoom-hover">
+                            <img src="images/gallery/UQ_Graduation_with_mom.jpeg" alt="UQ Graduation with Mom" data-caption="UQ Graduation Day with Mom" data-full-src="images/gallery/UQ_Graduation_with_mom.jpeg" style="cursor: pointer;">
+                            <div class="gallery-overlay">
+                                <h3>Graduation Day</h3>
+                                <p>With Mom</p>
+                            </div>
+                        </div>
+
+                        <div class="gallery-item zoom-hover">
+                            <img src="images/gallery/dfrws_presenter.jpeg" alt="DFRWS Presentation" data-caption="Presenting at DFRWS Digital Forensics Conference" data-full-src="images/gallery/dfrws_presenter.jpeg" style="cursor: pointer;">
+                            <div class="gallery-overlay">
+                                <h3>DFRWS Presenter</h3>
+                                <p>Digital Forensics Conference</p>
+                            </div>
+                        </div>
+
+                        <div class="gallery-item zoom-hover">
+                            <img src="images/gallery/stanford_uni.jpeg" alt="Stanford University" data-caption="Visit to Stanford University" data-full-src="images/gallery/stanford_uni.jpeg" style="cursor: pointer;">
+                            <div class="gallery-overlay">
+                                <h3>Stanford University</h3>
+                                <p>Campus Visit</p>
+                            </div>
+                        </div>
+
+                        <div class="gallery-item zoom-hover">
+                            <img src="images/gallery/golden_gate_bridge.jpeg" alt="Golden Gate Bridge" data-caption="Golden Gate Bridge, San Francisco" data-full-src="images/gallery/golden_gate_bridge.jpeg" style="cursor: pointer;">
+                            <div class="gallery-overlay">
+                                <h3>Golden Gate Bridge</h3>
+                                <p>San Francisco</p>
+                            </div>
+                        </div>
+
+                        <div class="gallery-item zoom-hover">
+                            <img src="images/gallery/Women_in_Tech_Awards_Gala.jpeg" alt="Women in Tech Awards Gala" data-caption="Women in Tech Awards Gala" data-full-src="images/gallery/Women_in_Tech_Awards_Gala.jpeg" style="cursor: pointer;">
+                            <div class="gallery-overlay">
+                                <h3>WIT Awards Gala</h3>
+                                <p>Women in Tech</p>
+                            </div>
+                        </div>
+
+                        <div class="gallery-item zoom-hover">
+                            <img src="images/gallery/summer_research_group.jpeg" alt="Summer Research Group" data-caption="Summer Research Team" data-full-src="images/gallery/summer_research_group.jpeg" style="cursor: pointer;">
+                            <div class="gallery-overlay">
+                                <h3>Summer Research</h3>
+                                <p>Research Team</p>
+                            </div>
+                        </div>
+                    </div>
+                    <p class="intro-text" style="margin-top: 2rem; text-align: center;">
+                        <a href="gallery.html" class="inline-link">View Full Gallery →</a>
+                    </p>
+                </div>
+            </section>
         </main>
     </div>
 
