Update gallery preview images and reduce blog card width to half

--- a/index.html
+++ b/index.html
@@ -335,50 +335,34 @@
                 <div class="content-card fade-in">
                     <div class="gallery-container" style="grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));">
                         <div class="gallery-item zoom-hover">
-                            <img src="images/gallery/UQ_Graduation_with_mom.jpeg" alt="UQ Graduation with Mom" data-caption="UQ Graduation Day with Mom" data-full-src="images/gallery/UQ_Graduation_with_mom.jpeg" style="cursor: pointer;">
+                            <img src="images/gallery/golden_gate_visit.jpeg" alt="Golden Gate Visit" data-caption="Visiting the Golden Gate" data-full-src="images/gallery/golden_gate_visit.jpeg" style="cursor: pointer;">
                             <div class="gallery-overlay">
-                                <h3>Graduation Day</h3>
-                                <p>With Mom</p>
-                            </div>
-                        </div>
-
-                        <div class="gallery-item zoom-hover">
-                            <img src="images/gallery/dfrws_presenter.jpeg" alt="DFRWS Presentation" data-caption="Presenting at DFRWS Digital Forensics Conference" data-full-src="images/gallery/dfrws_presenter.jpeg" style="cursor: pointer;">
-                            <div class="gallery-overlay">
-                                <h3>DFRWS Presenter</h3>
-                                <p>Digital Forensics Conference</p>
-                            </div>
-                        </div>
-
-                        <div class="gallery-item zoom-hover">
-                            <img src="images/gallery/stanford_uni.jpeg" alt="Stanford University" data-caption="Visit to Stanford University" data-full-src="images/gallery/stanford_uni.jpeg" style="cursor: pointer;">
-                            <div class="gallery-overlay">
-                                <h3>Stanford University</h3>
-                                <p>Campus Visit</p>
-                            </div>
-                        </div>
-
-                        <div class="gallery-item zoom-hover">
-                            <img src="images/gallery/golden_gate_bridge.jpeg" alt="Golden Gate Bridge" data-caption="Golden Gate Bridge, San Francisco" data-full-src="images/gallery/golden_gate_bridge.jpeg" style="cursor: pointer;">
-                            <div class="gallery-overlay">
-                                <h3>Golden Gate Bridge</h3>
+                                <h3>Golden Gate Visit</h3>
                                 <p>San Francisco</p>
                             </div>
                         </div>
 
                         <div class="gallery-item zoom-hover">
-                            <img src="images/gallery/Women_in_Tech_Awards_Gala.jpeg" alt="Women in Tech Awards Gala" data-caption="Women in Tech Awards Gala" data-full-src="images/gallery/Women_in_Tech_Awards_Gala.jpeg" style="cursor: pointer;">
+                            <img src="images/gallery/uq_leader.jpeg" alt="UQ Leadership" data-caption="University of Queensland Leadership" data-full-src="images/gallery/uq_leader.jpeg" style="cursor: pointer;">
                             <div class="gallery-overlay">
-                                <h3>WIT Awards Gala</h3>
-                                <p>Women in Tech</p>
+                                <h3>UQ Leadership</h3>
+                                <p>University of Queensland</p>
                             </div>
                         </div>
 
                         <div class="gallery-item zoom-hover">
-                            <img src="images/gallery/summer_research_group.jpeg" alt="Summer Research Group" data-caption="Summer Research Team" data-full-src="images/gallery/summer_research_group.jpeg" style="cursor: pointer;">
+                            <img src="images/gallery/UQ_Graduation_with_friends.jpeg" alt="UQ Graduation with Friends" data-caption="UQ Graduation with Friends" data-full-src="images/gallery/UQ_Graduation_with_friends.jpeg" style="cursor: pointer;">
                             <div class="gallery-overlay">
-                                <h3>Summer Research</h3>
-                                <p>Research Team</p>
+                                <h3>Graduation</h3>
+                                <p>With Friends</p>
+                            </div>
+                        </div>
+
+                        <div class="gallery-item zoom-hover">
+                            <img src="images/gallery/DFRWS_Poster_Presentations.jpeg" alt="DFRWS Poster Presentations" data-caption="DFRWS Poster Presentations" data-full-src="images/gallery/DFRWS_Poster_Presentations.jpeg" style="cursor: pointer;">
+                            <div class="gallery-overlay">
+                                <h3>Poster Presentations</h3>
+                                <p>DFRWS Conference</p>
                             </div>
                         </div>
                     </div>
