--- a/blogs.html
+++ b/blogs.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" type="image/png" href="images/favicon.png">
 </head>
-<body>
+<body class="blogs-page">
     <header class="top-navbar">
         <a href="index.html" class="site-logo">sa.sh</a>
         <nav>
