--- a/contact.html
+++ b/contact.html
@@ -59,48 +59,49 @@
                 </div>
                 
                 <div class="content-card-contact fade-in">
-                    <div class="contact-form-container">
-                        <h3 style="color: white; margin-bottom: 1.5rem; text-align: center;">Send me a message</h3>
-                        <form id="contact-form" class="contact-form">
-                            <div class="form-group">
-                                <label for="name">Name</label>
-                                <input type="text" id="name" name="name" placeholder="Enter your Name" required>
-                            </div>
-                            <div class="form-group">
-                                <label for="email">Email</label>
-                                <input type="email" id="email" name="email" placeholder="Enter your Email" required>
-                            </div>
-                            <div class="form-group">
-                                <label for="message">Message</label>
-                                <textarea id="message" name="message" rows="5" placeholder="Enter your Message" required></textarea>
-                            </div>
-                            <button type="submit" class="submit-button">
-                                <span>Submit</span>
-                                <span class="submit-icon">✈</span>
-                            </button>
-                            <div id="form-message" class="form-message"></div>
-                        </form>
-                    </div>
+                    <div class="contact-layout">
+                        <div class="contact-form-container">
+                            <h3 style="color: white; margin-bottom: 1.5rem;">Send me a message</h3>
+                            <form id="contact-form" class="contact-form">
+                                <div class="form-group">
+                                    <label for="name">Name</label>
+                                    <input type="text" id="name" name="name" placeholder="Enter your Name" required>
+                                </div>
+                                <div class="form-group">
+                                    <label for="email">Email</label>
+                                    <input type="email" id="email" name="email" placeholder="Enter your Email" required>
+                                </div>
+                                <div class="form-group">
+                                    <label for="message">Message</label>
+                                    <textarea id="message" name="message" rows="4" placeholder="Enter your Message" required></textarea>
+                                </div>
+                                <button type="submit" class="submit-button">
+                                    <span>Submit</span>
+                                    <span class="submit-icon">✈</span>
+                                </button>
+                                <div id="form-message" class="form-message"></div>
+                            </form>
+                        </div>
 
-                    <div class="contact-divider">
-                        <span>OR</span>
+                        <div class="contact-methods-sidebar">
+                            <h3 style="color: white; margin-bottom: 1.5rem;">Or reach out directly</h3>
+                            <div class="contact-methods-vertical">
+                                <a href="mailto:saakshigupta2002@gmail.com" class="contact-button pulse">
+                                    <img src="images/icons/email-icon.png" alt="Email">
+                                    <span>Email Me</span>
+                                </a>
+                                <a href="https://github.com/saakshigupta2002" target="_blank" class="contact-button pulse">
+                                    <img src="images/icons/github-icon.png" alt="GitHub">
+                                    <span>View GitHub</span>
+                                </a>
+                                <a href="https://linkedin.com/in/saakshigupta-" target="_blank" class="contact-button pulse">
+                                    <img src="images/icons/linkedin-icon.png" alt="Linkedin">
+                                    <span>LinkedIn</span>
+                                </a>
+                            </div>
+                            <p class="contact-note-sidebar">I aim to respond to all inquiries within 24-48 hours.</p>
+                        </div>
                     </div>
-
-                    <div class="contact-methods">
-                        <a href="mailto:saakshigupta2002@gmail.com" class="contact-button pulse">
-                            <img src="images/icons/email-icon.png" alt="Email">
-                            <span>Email Me</span>
-                        </a>
-                        <a href="https://github.com/saakshigupta2002" target="_blank" class="contact-button pulse">
-                            <img src="images/icons/github-icon.png" alt="GitHub">
-                            <span>View GitHub</span>
-                        </a>
-                        <a href="https://linkedin.com/in/saakshigupta-" target="_blank" class="contact-button pulse">
-                            <img src="images/icons/linkedin-icon.png" alt="Linkedin">
-                            <span>LinkedIn</span>
-                        </a>
-                    </div>
-                    <p class="contact-note">I aim to respond to all inquiries within 24-48 hours.</p>
                 </div>
             </section>
         </main>
